[package]
name = "fina" # lowercase recommended
version = "0.1.0"
edition = "2021"
authors = ["Yash"]
description = "A fast math library for machine learning functions written in Rust"
license = "MIT"

[lib]
name = "fina"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py37"] }


[package.metadata.maturin]
name = "fina"
